# GmdToMid

./: .gitmodules  CMakeLists.txt  README.md
GmdToMid/: CMakeLists.txt  ChunkHeader.h  ConsoleMain.cpp  GmdFile.cpp  GmdFile.h  MidiFile.cpp  MidiFile.h  MidiHeaderData.h  Program.cpp  Program.h  Version.h.in
